Modification du notebook tirage_nps

--- a/notebooks/tirage_nps.ipynb
+++ b/notebooks/tirage_nps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,33 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# noms des vagues exclues du tirage\n",
-    "excluded_last_nps = ['U1','U2'] \n",
+    "excluded_last_nps = ['U1','U2','U3'] \n",
     "\n",
     "# nom de la nouvelle vague NPS (dernière vague de excluded_last_nps + 1)\n",
-    "new_nps='U3'"
+    "new_nps='U4'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/tljh/user/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (22,26,27,29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# on importe le csv\n",
     "contacts = pd.read_csv('~/contacts.csv',sep=',')\n",
@@ -71,20 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: nps, dtype: int64)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# on vérifie que les vagues exclues du tirage ont bien été exclues. Output attendu : \n",
     "# [Series([], Name: nps, dtype: int64)]\n",
@@ -93,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,26 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "email             1850\n",
-       "département         21\n",
-       "nps                  1\n",
-       "unsubscribed.1       1\n",
-       "isEligibleDept       1\n",
-       "excluded             1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# on regarde si le tirage c'est bien passé. Output attendu : \n",
     "# [email = 1850, nps = 1 (new_nps), excluded = 1 (False)]\n",
@@ -134,13 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# on exporte la nouvelle vague de contact NPS\n",
     "selected_contacts.to_csv('nps_'+new_nps+'.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
