(PC-2711) added sys.path to be able to use api code

--- a/notebooks/Exploration des offres à 5, 10 et 100km.ipynb
+++ b/notebooks/Exploration des offres à 5, 10 et 100km.ipynb
@@ -6,9 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "from flask import Flask\n",
+    "import geopy.distance\n",
     "import os\n",
-    "from sqlalchemy import create_engine"
+    "import pandas\n",
+    "from sqlalchemy import create_engine\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath('../..') + '/pass_culture_api')"
    ]
   },
   {
@@ -17,11 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopy.distance\n",
     "from models.offer import Offer\n",
-    "from flask import Flask\n",
     "from models.db import db\n",
-    "from repository.offer_queries import get_active_offers_ids_query\n"
+    "from repository.offer_queries import get_active_offers_ids_query"
    ]
   },
   {
