Modification du notebook tirage_nps : passage de 1850 à 2500

--- a/notebooks/tirage_nps.ipynb
+++ b/notebooks/tirage_nps.ipynb
@@ -22,10 +22,10 @@
    "outputs": [],
    "source": [
     "# noms des vagues exclues du tirage\n",
-    "excluded_last_nps = ['U1','U2','U3'] \n",
+    "excluded_last_nps = ['U1','U2','U3','U4','U4b','U5','U6'] \n",
     "\n",
     "# nom de la nouvelle vague NPS (dernière vague de excluded_last_nps + 1)\n",
-    "new_nps='U4'"
+    "new_nps='U7'"
    ]
   },
   {
@@ -75,8 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# on tire 1850 lignes aléatoirement\n",
-    "selected_contacts = selected_contacts.sample(n=1850)\n",
+    "# on tire 2500 lignes aléatoirement\n",
+    "selected_contacts = selected_contacts.sample(n=2500)\n",
     "\n",
     "# nom de la nouvelle vague NPS (dernière vague de excluded_last_nps + 1)\n",
     "selected_contacts['nps']=new_nps"
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# on regarde si le tirage c'est bien passé. Output attendu : \n",
-    "# [email = 1850, nps = 1 (new_nps), excluded = 1 (False)]\n",
+    "# [email = 2500, nps = 1 (new_nps), excluded = 1 (False)]\n",
     "selected_contacts.nunique()"
    ]
   },
