integrate PR comments

--- a/notebooks/exploration_geolocalisation.ipynb
+++ b/notebooks/exploration_geolocalisation.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il s'agit pendant cette exploration de trouver une distance qui permet de remonter des offres diversifiées à un utilisateur de l'application Pass Culture.\n",
+    "Il s'agit pendant cette exploration de trouver une distance qui permet de remonter des offres diversifiées à un utilisateur de l'application pass Culture.\n",
     "Les critères de diversifications sont : \n",
-    "- Pas assigner à résidence (une disance minimale)\n",
+    "- Ne pas assigner à résidence (une distance minimale)\n",
     "- Pas d'offres lointaines ou l'utilisateur ne peut se rendre\n",
     "- Un nombre de catégories diversifiées"
    ]
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Connexion à la Base de données créée"
+    "## Connexion à la base de données créée"
    ]
   },
   {
@@ -85,15 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#iris_france_gpd = gpd.read_postgis('iris_france', engine_string, geom_col='shape', crs={'init': 'epsg:4326'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_num_offers(engine, lon, lat, dist):\n",
     "    venues_query = '''WITH reference_point AS ( \n",
     "       SELECT ST_CENTROID(shape) AS centroid \n",
@@ -101,22 +92,23 @@
     "       WHERE ST_CONTAINS(shape, ST_SetSRID(ST_MakePoint({}, {}), 4326))) \n",
     "       SELECT venue.id FROM venue, reference_point WHERE ST_DISTANCE(centroid, CAST(ST_SetSRID(ST_MakePoint(longitude, latitude), 4326) AS GEOGRAPHY)) < {};'''.format(lon,lat,dist)\n",
     "    \n",
-    "    venues_ids =[]\n",
+    "    venues_ids = []\n",
     "    \n",
     "    def get_venues_id(query, engine):\n",
-    "        venues_list = list(pd.read_sql_query(query,engine)['id'])\n",
-    "        if len(venues_list) > 0 :\n",
+    "        venues_list = list(pd.read_sql_query(query, engine)['id'])\n",
+    "        \n",
+    "        if len(venues_list) > 0:\n",
     "            return venues_list\n",
-    "        else:\n",
-    "            return []\n",
+    "        \n",
+    "        return []\n",
     "    \n",
     "    venues_ids = get_venues_id(venues_query, engine)\n",
     "    \n",
     "    if venues_ids:\n",
     "        if len(venues_ids) == 1:\n",
-    "            return int(pd.read_sql_query('''select count(*) from discovery_view where \"venueId\" = {};'''.format(venues_ids[0]),engine).iloc[0])\n",
+    "            return int(pd.read_sql_query('''SELECT COUNT(*) FROM discovery_view WHERE \"venueId\" = {};'''.format(venues_ids[0]),engine).iloc[0])\n",
     "        else:\n",
-    "            return int(pd.read_sql_query('''select count(*) from discovery_view where \"venueId\" in {};'''.format(tuple(venues_ids)),engine).iloc[0])\n",
+    "            return int(pd.read_sql_query('''SELECT COUNT(*) FROM discovery_view WHERE \"venueId\" IN {};'''.format(tuple(venues_ids)),engine).iloc[0])\n",
     "    else:\n",
     "        return 0"
    ]
@@ -134,22 +126,21 @@
     "       WHERE ST_CONTAINS(shape, ST_SetSRID(ST_MakePoint({}, {}), 4326))) \n",
     "       SELECT venue.id FROM venue, reference_point WHERE ST_DISTANCE(centroid, CAST(ST_SetSRID(ST_MakePoint(longitude, latitude), 4326) AS GEOGRAPHY)) < {};'''.format(lon,lat,dist)\n",
     "    \n",
-    "    venues_ids =[]\n",
+    "    venues_ids = []\n",
     "    \n",
     "    def get_venues_id(query, engine):\n",
-    "        venues_list = list(pd.read_sql_query(query,engine)['id'])\n",
-    "        if len(venues_list) > 0 :\n",
+    "        venues_list = list(pd.read_sql_query(query, engine)['id'])\n",
+    "        if len(venues_list) > 0:\n",
     "            return venues_list\n",
-    "        else:\n",
-    "            return []\n",
+    "        return []\n",
     "    \n",
     "    venues_ids = get_venues_id(venues_query, engine)\n",
     "    \n",
     "    if venues_ids:\n",
     "        if len(venues_ids) == 1:\n",
-    "            return int(pd.read_sql_query('''select count(distinct(type)) from discovery_view where \"venueId\" = {};'''.format(venues_ids[0]),engine).iloc[0])\n",
+    "            return int(pd.read_sql_query('''SELECT COUNT(DISTINCT(type)) FROM discovery_view WHERE \"venueId\" = {};'''.format(venues_ids[0]),engine).iloc[0])\n",
     "        else:\n",
-    "            return int(pd.read_sql_query('''select count(distinct(type)) from discovery_view where \"venueId\" in {};'''.format(tuple(venues_ids)),engine).iloc[0])\n",
+    "            return int(pd.read_sql_query('''SELECT COUNT(DISTINCT(type)) FROM discovery_view WHERE \"venueId\" IN {};'''.format(tuple(venues_ids)),engine).iloc[0])\n",
     "    else:\n",
     "        return 0"
    ]
@@ -301,7 +292,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sarcelles_df = pd.DataFrame({'distance_ref' : list(distance_ref)})\n",
     "sarcelles_df = pd.DataFrame({'distance_ref' : list(range(5000, 40000, 1000))})"
    ]
   },
@@ -339,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nombres d'offres"
+    "## Nombre d'offres"
    ]
   },
   {
@@ -355,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nombres de catégories"
+    "## Nombre de catégories"
    ]
   },
   {
@@ -419,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nombres d'offres"
+    "## Nombre d'offres"
    ]
   },
   {
@@ -435,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nombres de catégories"
+    "## Nombre de catégories"
    ]
   },
   {
@@ -553,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pres_de_charlesville_mezieres"
+    "## Près de Charleville-Mézières"
    ]
   },
   {
