(PC-2758) add number of venues

--- a/notebooks/exploration_geolocalisation.ipynb
+++ b/notebooks/exploration_geolocalisation.ipynb
@@ -85,6 +85,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_num_venues(engine, lon, lat, dist):\n",
+    "    venues_query = '''WITH reference_point AS ( \n",
+    "       SELECT ST_CENTROID(shape) AS centroid \n",
+    "       FROM iris_france \n",
+    "       WHERE ST_CONTAINS(shape, ST_SetSRID(ST_MakePoint({}, {}), 4326))) \n",
+    "       SELECT venue.id FROM venue, reference_point WHERE ST_DISTANCE(centroid, CAST(ST_SetSRID(ST_MakePoint(longitude, latitude), 4326) AS GEOGRAPHY)) < {};'''.format(lon,lat,dist)\n",
+    "    \n",
+    "    venues_list = list(pd.read_sql_query(venues_query,engine)['id'])\n",
+    "    return len(venues_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_num_offers(engine, lon, lat, dist):\n",
     "    venues_query = '''WITH reference_point AS ( \n",
     "       SELECT ST_CENTROID(shape) AS centroid \n",
@@ -261,12 +278,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nombre de lieux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paris_df['nombre_venues'] = paris_df.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_df(paris_df, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(paris_df, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   },
   {
@@ -358,12 +400,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nombre de lieux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarcelles_df['nombre_venues'] = sarcelles_df.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_df(sarcelles_df, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(sarcelles_df, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   },
   {
@@ -438,12 +505,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nombre de lieux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aulnay_df['nombre_venues'] = aulnay_df.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_df(aulnay_df, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(aulnay_df, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   },
   {
@@ -476,7 +568,8 @@
     "bretagne_gdf = gpd.GeoDataFrame(bretagne_df, geometry=gpd.points_from_xy(bretagne_df.longitude, bretagne_df.latitude))\n",
     "bretagne_gdf.crs = {'init': 'epsg:4326'}\n",
     "bretagne_df['nombre_offres'] = bretagne_df.apply(lambda row : get_num_offers(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
-    "bretagne_df['nombre_categories'] = bretagne_df.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+    "bretagne_df['nombre_categories'] = bretagne_df.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
+    "bretagne_df['nombre_venues'] = bretagne_df.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
    ]
   },
   {
@@ -486,6 +579,15 @@
    "outputs": [],
    "source": [
     "plot_df(bretagne_df, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(bretagne_df, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   },
   {
@@ -527,7 +629,8 @@
     "quimper_df = gpd.GeoDataFrame(quimper_df, geometry=gpd.points_from_xy(quimper_df.longitude, quimper_df.latitude))\n",
     "quimper_df.crs = {'init': 'epsg:4326'}\n",
     "quimper_df['nombre_offres'] = quimper_df.apply(lambda row : get_num_offers(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
-    "quimper_df['nombre_categories'] = quimper_df.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+    "quimper_df['nombre_categories'] = quimper_df.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
+    "quimper_df['nombre_venues'] = quimper_df.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
    ]
   },
   {
@@ -537,6 +640,15 @@
    "outputs": [],
    "source": [
     "plot_df(quimper_df, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(quimper_df, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   },
   {
@@ -569,7 +681,8 @@
     "pres_de_charlesville_mezieres = gpd.GeoDataFrame(pres_de_charlesville_mezieres, geometry=gpd.points_from_xy(pres_de_charlesville_mezieres.longitude, pres_de_charlesville_mezieres.latitude))\n",
     "pres_de_charlesville_mezieres.crs = {'init': 'epsg:4326'}\n",
     "pres_de_charlesville_mezieres['nombre_offres'] = pres_de_charlesville_mezieres.apply(lambda row : get_num_offers(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
-    "pres_de_charlesville_mezieres['nombre_categories'] = pres_de_charlesville_mezieres.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
+    "pres_de_charlesville_mezieres['nombre_categories'] = pres_de_charlesville_mezieres.apply(lambda row : get_num_categories(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)\n",
+    "pres_de_charlesville_mezieres['nombre_venues'] = pres_de_charlesville_mezieres.apply(lambda row : get_num_venues(engine, row['longitude'], row['latitude'], row['distance_ref']), axis=1)"
    ]
   },
   {
@@ -579,6 +692,15 @@
    "outputs": [],
    "source": [
     "plot_df(pres_de_charlesville_mezieres, 'distance_ref', 'nombre_offres', 'nombre_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df(pres_de_charlesville_mezieres, 'distance_ref', 'nombre_venues', 'nombre_categories')"
    ]
   }
  ],
