--- a/notebooks/Content_based_description_des_offres.ipynb
+++ b/notebooks/Content_based_description_des_offres.ipynb
@@ -22,12 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On récupère les offres achetées par les utilisateurs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On recupere les offres achetées par les utilisateurs\n",
     "debut = time.time()\n",
     "offres_achetees = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, description, offer.name \n",
     "                       FROM booking \n",
@@ -61,12 +67,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On ne garde que les offres ayant une description et qui de plus ont plus de 600 caractères "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On ne garde que les offres ayant une description et qui de plus ont plus de 600 caractères \n",
     "offres_achetees = offres_achetees[offres_achetees['description'].notnull()]\n",
     "offres_achetees = offres_achetees[offres_achetees['description'].map(len) > 600]"
    ]
@@ -99,12 +111,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On calcule le TF-IDF des offres "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On calcule le TF-IDF des offres \n",
     "debut = time.time()\n",
     "\n",
     "vectorizer = TfidfVectorizer(analyzer='word', \\\n",
@@ -120,12 +138,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On calcule la sililarité entre les offres"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On calcule la sililarité entre les offres\n",
     "debut = time.time()\n",
     "\n",
     "#Linear kernel = cosine_similarity quand on a une très grande quantité de données (linear kernel est plus rapide)\n",
@@ -137,12 +161,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On récupère pour chaque offre, les offres qui sont similaires"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On récupère pour chaque offre, les offres qui sont similaires\n",
     "debut = time.time()\n",
     "\n",
     "resultat = {} #Dictionnaire pour les résultats sous la forme (offer_id : (Score, offer_id))\n",
@@ -203,6 +233,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Très bon exemple d'offre :\n",
+    "- Michael Jackson : id = 188929\n",
+    "- Dictionnaire : id = 314706"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -213,13 +252,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#####################################################################################\n",
-    "############# Récupèrer le vecteur TF-IDF d'une offre ###############################"
+    "### On récupère le vecteur TF-IDF d'une offre"
    ]
   },
   {
@@ -267,6 +303,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
